cluster/gitops/monitoring/victoria-metrics/vm-migration/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
# Temporary: the vm-migration VMCluster, k8s-stack vmagent dual-writing into it,
# and the vmctl job that copies history. Remove with the VMCluster.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vm-migration
specs:
  - description: vmstorage
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: vmstorage
        app.kubernetes.io/instance: vm-migration
    egress:
      - &to_license_service
        toEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: victoria-metrics-license-service
              app.kubernetes.io/name: victoria-metrics-license-service
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8482"
                protocol: TCP
      - fromEndpoints:
          - &vminsert_selector
            matchLabels:
              app.kubernetes.io/name: vminsert
              app.kubernetes.io/instance: vm-migration
        toPorts:
          - ports:
              - port: "8400"
                protocol: TCP
      - fromEndpoints:
          - &vmselect_selector
            matchLabels:
              app.kubernetes.io/name: vmselect
              app.kubernetes.io/instance: vm-migration
        toPorts:
          - ports:
              - port: "8401"
                protocol: TCP
      - fromEndpoints:
          - &metrics_scraper
            matchLabels:
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8482"
                protocol: TCP
  - description: vminsert
    endpointSelector: *vminsert_selector
    egress:
      - &dns_resolution
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      - *to_license_service
      - toEndpoints:
          - &vmstorage_selector
            matchLabels:
              app.kubernetes.io/name: vmstorage
              app.kubernetes.io/instance: vm-migration
        toPorts:
          - ports:
              - port: "8400"
                protocol: TCP
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8480"
                protocol: TCP
      - fromEndpoints:
          - &k8s_stack_vmagent
            matchLabels:
              app.kubernetes.io/name: vmagent
              app.kubernetes.io/instance: victoria-metrics-k8s-stack
          - &vmctl_selector
            matchLabels:
              app.kubernetes.io/name: vm-migration-vmctl
          - *metrics_scraper
        toPorts:
          - ports:
              - port: "8480"
                protocol: TCP
  - description: vmselect
    endpointSelector: *vmselect_selector
    egress:
      - *dns_resolution
      - *to_license_service
      - toEndpoints:
          - *vmstorage_selector
        toPorts:
          - ports:
              - port: "8401"
                protocol: TCP
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8481"
                protocol: TCP
      - fromEndpoints:
          - *vmctl_selector
          - *metrics_scraper
        toPorts:
          - ports:
              - port: "8481"
                protocol: TCP
  - description: k8s-stack vmagent writing to (and scraping) vm-migration
    endpointSelector: *k8s_stack_vmagent
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: vm-migration
        toPorts:
          - ports:
              - port: "8480"
                protocol: TCP
              - port: "8481"
                protocol: TCP
              - port: "8482"
                protocol: TCP
  - description: vmctl copying history from the k8s-stack VMCluster
    endpointSelector: *vmctl_selector
    egress:
      - *dns_resolution
      - toEndpoints:
          - &k8s_stack_vmselect
            matchLabels:
              app.kubernetes.io/name: vmselect
              app.kubernetes.io/instance: victoria-metrics-k8s-stack
          - *vmselect_selector
        toPorts:
          - ports:
              - port: "8481"
                protocol: TCP
      - toEndpoints:
          - *vminsert_selector
        toPorts:
          - ports:
              - port: "8480"
                protocol: TCP
  - description: k8s-stack vmselect, from vmctl
    endpointSelector: *k8s_stack_vmselect
    ingress:
      - fromEndpoints:
          - *vmctl_selector
        toPorts:
          - ports:
              - port: "8481"
                protocol: TCP
